# nubla-siem

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.fluentd  README.md  README_OPERATIONS.md  README_TESTING.md  devices.csv  docker-compose.snippet  docker-compose.yml  docker_compose_effective.yaml  estructura.txt  fix_alias.json  generate_logs.py  generate_password_hash.py  logstash.conf  pyproject.toml  pytest.ini  qr_code_base64.txt  requirements-dev.txt  schema.sql  seed.sql  setup_iptables.sh.bak  tenants.csv  users.csv
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  normalizer.py  requirements.txt  tenant_bootstrap.py  tenant_bootstrap.py.bak
backend/api/: __init__.py  db.py  main.py
backend/app/: Dockerfile  __init__.py  main.py  requirements.txt
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py  logs.py  tenant.py  user.py
backend/processing/: normalizer.py  rabbitmq_consumer.py  requirements.txt
backend/scripts/: ism_healthcheck.sh
backend/services/: __init__.py  elasticsearch.py  rabbitmq.py
backend/tests/: test_consumer_missing_tenant.py  test_health.py  test_host_to_tenant_mapping.py  test_index_retries.py  test_ism_policy_script.py  test_mappings_schema_diff.py  test_normalizer.py  test_normalizer_additional.py  test_normalizer_numeric_cast.py  test_prepare_event_schema.py  test_rollover_script.py
certs/: elastic-ca.p12  elastic-certificates.p12
config/: host_tenant_map.json  tenants.json
docs/: current_state_and_delta.md  risks_and_mitigations.md  roadmap.md  work_plan.md  work_plan_improvement.md
docs/ADR/: ADR_001_messaging_redpand.md  ADR_002_storage_opensearch.md  ADR_003_agents_vector.md  ADR_004_schema_ncs_registry.md  ADR_005_multitenancy_index_per_tenant.md
docs/architecture/: control_plane_vs_data_plane.md  ingestion_and_processing.md  logging_components.md  logging_data_contract.md  logging_future_extensions.md  logging_glossary.md  logging_overview.md  logging_rollover_ism.md  logging_runbook.md  logging_sequence.md  (+4 more)
filebeat/: filebeat.yml
fluentd/: fluent.conf
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json
ingestion/: Dockerfile.fluentd  fluent.conf  generate_logs.py
k8s/: deployment.yaml
logs/: generate_hash_password.py
nubla_siem.egg-info/: PKG-INFO  SOURCES.txt
policies/: ism_logs_default.json  ism_logs_delawarehotal.json  ism_logs_delawarehotel.json  ism_logs_generic.json
postgres-ssl/: server.crt  server.key
rabbitmq/: definitions.json
rabbitmq-certs/: ca.crt  ca.key  ca.srl  rabbitmq.conf  rabbitmq.crt  rabbitmq.csr  rabbitmq.key
scripts/: __init__.py  apply_ism_policy.py  apply_policies.py  check_alias.py  check_dlq.sh  explain_ism_all.py  onboard_tenant.py  rollover_tenant_index.py  setup_ingest_pipeline.py  snapshot_before_delete.py
templates/: logs_default_template.json
(+115 files in other folders)
