[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nubla-siem"
version = "0.1.0"
description = "Nubla SIEM"
readme = "README.md"
requires-python = ">=3.9"
# Opcional: mueve dependencias de runtime aquí como una lista en [project.dependencies]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = [
  "config*", "infra*", "rabbitmq*", "policies*",
  "templates*", "ingestion*", "docs*", "scripts*", "tests*"
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
exclude = ["backend/app/schema"]

[tool.ruff.lint]
# Antes estaba en [tool.ruff] select=[...], ahora va en la subsección lint
select = ["E", "F", "I"]
# Opcional pero recomendado si usas Black para el ancho de línea
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "integration: tests de integración (requieren servicios externos)",
  "unit: tests unitarios rápidos"
]
