[build-system]
requires = [ "setuptools>=68", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "nubla-siem"
version = "0.1.0"
description = "Nubla SIEM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "annotated-types==0.7.0", "anyio==4.11.0", "attrs==25.4.0", "certifi==2025.10.5", "charset-normalizer==3.4.4", "click==8.1.8", "exceptiongroup==1.3.0", "fastapi==0.112.0", "h11==0.16.0", "httptools==0.7.1", "idna==3.11", "jsonschema==4.25.1", "jsonschema-specifications==2025.9.1", "pika==1.3.2", "prometheus_client==0.20.0", "pydantic==2.8.2", "pydantic-settings==2.4.0", "pydantic_core==2.20.1", "python-dotenv==1.2.1", "python-json-logger==2.0.7", "PyYAML==6.0.3", "referencing==0.36.2", "requests==2.32.5", "rpds-py==0.27.1", "sniffio==1.3.1", "starlette==0.37.2", "structlog==24.1.0", "tenacity==9.0.0", "typing_extensions==4.15.0", "urllib3==1.26.20", "uvicorn==0.30.6", "uvloop==0.22.1", "watchfiles==1.1.1", "websockets==15.0.1", "opensearch-py==2.5.0", "pytest==7.4.0", "SQLAlchemy==2.0.36", "alembic==1.13.2", "psycopg2-binary==2.9.9", "passlib[bcrypt]==1.7.4", "python-jose[cryptography]==3.3.0", "bcrypt==4.0.1",]

[tool.black]
line-length = 100
target-version = [ "py39",]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
exclude = [ "backend/app/schema",]

[tool.ruff.lint]
select = [ "E", "F", "I",]
ignore = [ "E501",]

[tool.pytest.ini_options]
pythonpath = [ ".",]
markers = [ "integration: tests de integración (requieren servicios externos)", "unit: tests unitarios rápidos",]

[tool.setuptools.packages.find]
include = [ "backend*",]
exclude = [ "config*", "infra*", "rabbitmq*", "policies*", "templates*", "ingestion*", "docs*", "scripts*", "tests*",]
